--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.osacky.nightmode"
         minSdkVersion 10
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0 Beta 1"
+        versionCode 2
+        versionName "1.0"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
